# init

./: Cargo.toml  Makefile  README.md  TODO.md
data/: init.toml
data/rl1/: mount_devpts.toml  mount_devshm.toml  mount_procfs.toml  mount_sysfs.toml  mount_tmpfs.toml
data/rl2/: klogd.toml  set_hostname.toml  swap_enable.toml  syslogd.toml
data/rl3/: lo_interface.toml  netplugd.toml
docs/: README.md
src/: cmd.rs  config.rs  consts.rs  lib.rs  msg.rs  service.rs  traits.rs
