[package]
name = "lfa_init"
version = "1.0.0"
edition = "2021"
authors = ["Pelmen Zharenny <t.me/brezhnev_zhiv>"]
description = "Простая система инициализации для LFA"
license = "MIT"

[[bin]]
name = "init"

[[bin]]
name = "service"

[[bin]]
name = "poweroff"

[[bin]]
name = "reboot"

[profile.release]
strip = true
debug = false
incremental = false
opt-level = "s"
codegen-units = 1

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
nix = { version = "0.28.0", features = ["reboot"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
